<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PetrologNexus</string>
    <string name="app_title">PetrologNexus</string>

    <!--Menu Items-->
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_login">Telemetry Login</string>
    <string name="action_search">Find Well</string>
    <string name="action_tutorial">Tutorial</string>

    <!--Not Available -->
    <string name="n_a">N/A</string>

    <!--Current Status Titles -->
    <string name="well_status">Well Status:</string>

    <!--Current Status Titles (Well ON)-->
    <string name="pump_off">Pump Off:</string>
    <string name="strokes_this">Current Cycle:</string>

    <!--Current Status Titles (Well OFF)-->
    <string name="next_start">Next Start:</string>
    <string name="strokes_last">Last Cycle:</string>

    <!--Settings-->
    <string name="settings_title">POC Settings</string>
    <string name="clock_setting">POC Internal Clock:</string>
    <string name="pump_up_setting">Strokes @ Pump Up:</string>
    <string name="pump_off_setting">Strokes @ Pump Off:</string>
    <string name="fillage_setting">Percent Fillage:</string>
    <string name="timeout_setting">Current Time Out:</string>
    <string name="auto_timeout_setting">Automatic Time Out:</string>
    <string-array name="auto_timeout">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <!--Fillage-->
    <string name="current_fillage">Current Fillage:</string>
    <string name="percent_fillage_setting">Fillage Setting:</string>
    <string name="pump_off_distance">Pump Off Distance:</string>

    <!--History Trend-->
    <string name="current_month">Current Month</string>
    <string name="today">Today</string>
    <string name="last_month">Last Month</string>

    <!--Help-->
    <string name="current_h_s">
        Current Status:\nRelevant data about the current status of the well.
    </string>
    <string name="runtime_h_s">
        Run Time:\nToday\'s / yesterday\'s Run Time in hours and as a percentage.
    </string>
    <string name="runtime_trend_h_s">
        Run Time Trend:\nLast 30 days of Run Time in percentage.
    </string>
    <string name="map_h_s">
        Map:\nUpon connection to a Petrolog POC displays the current location.
    </string>
    <string name="dyna_h_s">
        Dynagraph:\nSurface card if the well is Running.
    </string>
    <string name="settings_h_s">
        Settings:\nCurrent operational settings of the POC.
    </string>
    <string name="fillage_h_s">
        Fillage:\nCurrent Pump Fillage and compares it with the Fillage Setting.
    </string>

    <!--gps misc-->
    <string name="dialog_cancel">Cancel</string>
    <string name="gps_network_not_enabled">GPS is not enabled</string>
    <string name="gps_network_not_enabled_message">This application needs the location services to be enabled, please open the location settings and enable it</string>
    <string name="open_location_settings">Open location settings</string>

    <string name="title_activity_temp">TempActivity</string>

    <string name="title_runtime">Runtime</string>
    <string name="desc_today_runtime">Today</string>
    <string name="desc_N_A">N/A</string>
    <string name="desc_yesterday_runtime">Yesterday</string>
    <string name="legend_current">Current</string>
    <string name="legend_past">Past</string>

    <string name="next">Next</string>
    <string name="title_activity_main_activity_drawer">MainActivityDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_toolbar_title_main">Petrolog Nexus</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>@string/nav_drawer_item_places</item>
        <item>@string/nav_drawer_item_balance</item>
        <item>@string/nav_drawer_item_scan_qr</item>
        <item>@string/nav_drawer_item_more_rewards</item>
        <item>@string/nav_drawer_item_my_account</item>
    </string-array>

    <string name="nav_drawer_item_places">Places</string>
    <string name="nav_drawer_item_balance">Balance</string>
    <string name="nav_drawer_item_scan_qr">Scan QR</string>
    <string name="nav_drawer_item_more_rewards">More rewards</string>
    <string name="nav_drawer_item_my_account">My account</string>
    <string name="nav_drawer_item_my_friends">My friends</string>
    <string name="nav_drawer_item_help">Help</string>

    <string name="dialog_not_connected_tittle">No internet connection</string>
    <string name="dialog_not_connected_message">It appears that you don\'t have an active internet connection, this application needs an active internet connection, please check your settings and try again</string>
    <string name="dialog_not_connected_close">Close</string>
    <string name="dialog_not_connected_legacy">Take me to Legacy</string>

    <string name="dialog_log_out_tittle">Log out</string>
    <string name="dialog_log_out_message">Are you sure you want to log out?</string>
    <string name="dialog_log_out_no">Cancel</string>
    <string name="dialog_log_out_yes">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="average_fillage">Average Fillage</string>
    <string name="setting_fillage">Setting Fillage</string>
    <string name="list_name">Name</string>
    <string name="list_problem">Problem</string>
    <string name="list_group">Group</string>
    <string name="list_location">Location</string>
    <string name="list_last_update">Last Update</string>
    <string name="topbar_title_attention">Wells that require attention</string>
    <string name="splash_email">Email</string>
    <string name="splash_password">Password</string>
    <string name="splash_log_in">Log in</string>
    <string name="login_empty">One or both of the fields are empty</string>
    <string name="drawer_items_map">Map</string>
    <string name="drawer_items_wells_that_require_attention">Wells that require attention</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_items_log_out">Log out</string>
    <string name="drawer_items_legacy">Legacy</string>
    <string name="action_help">help</string>
    <string name="action_refresh">refresh</string>
    <string name="help_map_focus">Click here to focus on your wells, instead of your actual location</string>
    <string name="help_map_satellite">Click here to toggle between the satellite view and the normal view</string>
    <string name="help_attention">Click in any of the wells on this list to go to the details</string>
    <string name="runtime">runtime</string>
</resources>
