<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/drawer_items_map"/>
        <item
            android:id="@+id/nav_attention"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="@string/drawer_items_wells_that_require_attention"/>
    </group>

    <item android:title="@string/drawer_item_settings">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_swap_horiz_grey_24dp"
                android:title="@string/drawer_items_log_out"/>

        </menu>
    </item>

</menu>
